fix(workflows): address namespace review comments